SOL: header small screen z-index issue

--- a/src/blocks/Header/_Header.scss
+++ b/src/blocks/Header/_Header.scss
@@ -76,7 +76,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          z-index: 1001;
+          // z-index: 1001;
         }
       // Layout in each Grid Area.
       }
