--- a/src/main.css
+++ b/src/main.css
@@ -330,7 +330,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1001;
   }
 }
 @media (min-width: 1000px) {
